--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <meta property="og:image:alt" content="Vente de parfum a des prix accessibles">
 
     <title>L'AURA DE FREDERICK</title>
-    <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -338,7 +339,8 @@
 
     </footer>
         
-    <script src="Bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="Bootstrap/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script>
 
       /* formulaire */
