--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="divcom1">
             <div class="commentaire" id="commentaire1">
               <div class="imagenom">
-                    <div class="Avisimage"><div class="Avisimage1"></div></div>
+                    <div class="Avisimage"><div class="Avisimage1" id="AvisimageOIP1"></div></div>
                     <div class="nommetier">
                         <div class="nm">Jordan</div>
                          <div class="nm">...</div>
@@ -252,7 +252,7 @@
             </div>
                 <div class="commentaire" id="commentaire2">
                   <div class="imagenom">
-                    <div class="Avisimage"><div class="Avisimage1"></div></div>
+                    <div class="Avisimage"><div class="Avisimage1" id="AvisimageOIP"></div></div>
                     <div class="nommetier">
                         <div class="nm">Mmd Fatima</div>
                          <div class="nm">...</div>
